Listado de remesas Exitoso

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -30,6 +30,10 @@
                                 asp-action="Index">Registrar Remesa</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ListarRemesas"
+                                asp-action="Index">Lista de Remesa</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">A cerca
                                 de</a>
                         </li>
